fix jumping button on hover

--- a/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
@@ -92,10 +92,6 @@
   margin-bottom: 1em;
 }
 
-.content a:hover {
-    border-bottom: 1px solid;
-}
-
 .admissions-promo{
   background-size: cover;
   background-position: center top;
