--- a/development/terminalfour/src/sass/ContentTypes/_content.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_content.scss
@@ -24,15 +24,7 @@ img.border {
   border: 1px solid #ececec;
   background: #fff
 }
- a {
-  color: #007dc3;
-  font-weight: 700
-}
- a:hover {
-  // color: #003663;
-  border-bottom: 1px solid;
-  text-decoration: none;
-}
+
 .description {
   font-size: 10px
 }
@@ -57,4 +49,16 @@ img.border {
 // transition: all 250ms ease-in-out;
 // }
 
+}
+
+.content-inner {
+  a {
+   color: #007dc3;
+   font-weight: 700
+ }
+  a:hover {
+   // color: #003663;
+   border-bottom: 1px solid;
+   text-decoration: none;
+ }
 }
